Added CRUD operations for exercise selectors

--- a/frontend/src/components/selector/selector.css
+++ b/frontend/src/components/selector/selector.css
@@ -74,3 +74,10 @@
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+
+.selector > .selector-input > button {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+
+  cursor: pointer;
+}
