--- a/frontend/src/components/selector/selector.css
+++ b/frontend/src/components/selector/selector.css
@@ -18,43 +18,11 @@
   background-color: #eee;
 }
 
-.selector > .selector-input {
-  display: flex;
-  gap: 1rem;
-
-  width: 100%;
-}
-
-.selector > .selector-input > select {
-  flex: 1;
-
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.selector > .selector-input > input[type="text"] {
-  flex: 1;
-
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.selector > .selector-input > select {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .selector > button {
   background: none;
   border: none;
 
-  background-color: lightblue;
+  background-color: rgb(216, 216, 216);
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   border-radius: 0.5rem;
@@ -68,16 +36,4 @@
 
 .selector > button:active {
   transform: scale(0.93);
-}
-
-.selector > .selector-input > .new-row {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.selector > .selector-input > button {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-
-  cursor: pointer;
 }
