--- a/frontend/src/components/selector/selectorInput.css
+++ b/frontend/src/components/selector/selectorInput.css
@@ -7,6 +7,7 @@
 
 .selector > .selector-input > select {
   flex: 1;
+  min-width: 0;
 
   padding-left: 1rem;
   padding-right: 1rem;
@@ -19,7 +20,7 @@
 }
 
 .selector > .selector-input > input[type="text"] {
-  flex: 1;
+  width: 3rem;
 
   padding-left: 1rem;
   padding-right: 1rem;
